// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature toggles test basic apis _changeRemoteFeatureValues 2`] = `
{
  "test/feature_a": {},
  "test/feature_aa": {},
  "test/feature_b": {},
  "test/feature_c": {},
  "test/feature_d": {},
  "test/feature_e": {},
  "test/feature_f": {},
  "test/feature_g": {},
  "test/feature_h": {},
}
`;

exports[`feature toggles test basic apis _changeRemoteFeatureValues 3`] = `
{
  "test/feature_a": {},
  "test/feature_aa": {},
  "test/feature_b": {},
  "test/feature_c": {
    "rootValue": "new_a",
  },
  "test/feature_d": {},
  "test/feature_e": {},
  "test/feature_f": {},
  "test/feature_g": {},
  "test/feature_h": {},
}
`;

exports[`feature toggles test basic apis getFeaturesInfos 1`] = `
{
  "test/feature_a": {
    "config": {
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "test/feature_aa": {
    "config": {
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "scopes": [
            "tenant",
            "user",
          ],
        },
      ],
    },
    "fallbackValue": false,
  },
  "test/feature_b": {
    "config": {
      "TYPE": "number",
    },
    "fallbackValue": 1,
  },
  "test/feature_c": {
    "config": {
      "TYPE": "string",
    },
    "fallbackValue": "best",
  },
  "test/feature_d": {
    "config": {
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "regex": "^(?:true)$",
        },
      ],
    },
    "fallbackValue": true,
  },
  "test/feature_e": {
    "config": {
      "TYPE": "number",
      "VALIDATIONS": [
        {
          "regex": "^\\d{1}$",
        },
      ],
    },
    "fallbackValue": 5,
  },
  "test/feature_f": {
    "config": {
      "TYPE": "string",
      "VALIDATIONS": [
        {
          "regex": "^(?:best|worst)$",
        },
      ],
    },
    "fallbackValue": "best",
  },
  "test/feature_g": {
    "config": {
      "ACTIVE": false,
      "TYPE": "string",
    },
    "fallbackValue": "activeTest",
  },
  "test/feature_h": {
    "config": {
      "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "TYPE": "string",
    },
    "fallbackValue": "appUrlTest",
  },
}
`;

exports[`feature toggles test basic apis initializeFeatureToggles 1`] = `
{
  "test/feature_a": {
    "TYPE": "boolean",
  },
  "test/feature_aa": {
    "TYPE": "boolean",
    "VALIDATIONS": [
      {
        "scopes": [
          "tenant",
          "user",
        ],
      },
    ],
    "VALIDATIONS_SCOPES_MAP": {
      "tenant": true,
      "user": true,
    },
  },
  "test/feature_b": {
    "TYPE": "number",
  },
  "test/feature_c": {
    "TYPE": "string",
  },
  "test/feature_d": {
    "TYPE": "boolean",
    "VALIDATIONS": [
      {
        "regex": "^(?:true)$",
      },
    ],
    "VALIDATIONS_REGEX": [
      /\\^\\(\\?:true\\)\\$/,
    ],
  },
  "test/feature_e": {
    "TYPE": "number",
    "VALIDATIONS": [
      {
        "regex": "^\\d{1}$",
      },
    ],
    "VALIDATIONS_REGEX": [
      /\\^\\\\d\\{1\\}\\$/,
    ],
  },
  "test/feature_f": {
    "TYPE": "string",
    "VALIDATIONS": [
      {
        "regex": "^(?:best|worst)$",
      },
    ],
    "VALIDATIONS_REGEX": [
      /\\^\\(\\?:best\\|worst\\)\\$/,
    ],
  },
  "test/feature_g": {
    "ACTIVE": false,
    "TYPE": "string",
  },
  "test/feature_h": {
    "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
    "TYPE": "string",
  },
}
`;
